# Django-Poll-App

./: pyproject.toml
polls/: models.py
