[tool.poetry]
name = "django-poll-app"
version = "0.1.0"
description = ""
authors = ["Faisal Abuzaid <faisalabuzaid@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "^3.4.1"
Django = "^3.2.5"
pytz = "^2021.1"
sqlparse = "^0.4.1"
faker = "^8.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
